third_party/rust/async-trait/tests/ui/delimiter-span.stderr
error: no rules expected the token `{`
  --> $DIR/delimiter-span.rs:17:16
   |
3  | macro_rules! picky {
   | ------------------ when calling this macro
...
17 |         picky!({ 123 });
   |                ^ no rules expected this token in macro call
